--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@
 
 [versions]
 # 构建工具版本
+filekitCompose = "0.8.8"
 kotlin = "2.1.20"
 agp = "8.7.3"
 # Android配置
@@ -30,6 +31,7 @@ dokka = "2.0.0"
 
 
 #gradlePlugin-android = "com.android.tools.build:gradle:8.11.0"
+filekit-compose = { module = "io.github.vinceglb:filekit-compose", version.ref = "filekitCompose" }
 gradlePlugin-android = "com.android.tools.build:gradle:8.10.0"
 #gradlePlugin-atomicFu = { module = "org.jetbrains.kotlinx:atomicfu-gradle-plugin", version.ref = "atomicfu" }
 gradlePlugin-composeCompiler = { module = "org.jetbrains.kotlin.plugin.compose:org.jetbrains.kotlin.plugin.compose.gradle.plugin", version.ref = "kotlin" }
