--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.iml
+.autoddl
 .kotlin
 .gradle
 **/build/
@@ -16,3 +17,7 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+/.fastRequest
+/shared/src/commonMain/kotlin/com/addzero/kmp/generated.zip
+secring.gpg
+key.gpg
