--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,11 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+#???false??????
 org.gradle.configuration-cache=true
+#org.gradle.configuration-cache=false
 org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
