--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,14 @@ kotlin.daemon.jvmargs=-Xmx3072M
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 #???false??????
-org.gradle.configuration-cache=true
-#org.gradle.configuration-cache=false
+#org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
 org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+group=io.gitee.zjarlin
+version=0.0.1
+
 
