--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.caching=true
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 
-group=io.gitee.zjarlin
-version=0.0.1
+#group=io.gitee.zjarlin
+#version=0.0.1
 
 
