--- a/local.properties
+++ b/local.properties
@@ -7,10 +7,12 @@
 #Fri Jul 04 20:29:55 CST 2025
 sdk.dir=/Users/zjarlin/Library/Android/sdk
 #6628E9CD8BAD04C47F598175DBAB9F417649054C
+
+signing.keyId=61E4D868
+signing.password=zhou9955
+#signing.secretKeyRingFile=../key.gpg
+signing.secretKeyRingFile=/Users/zjarlin/.gnupg/secring.gpg
+
 mavenCentralUsername=80/taBUS
 mavenCentralPassword=IsMt8GgdjfwdZA9PSNO8Uo4jtGDGLLpxHqfdKRjmro2b
-
-signing.keyId=7649054C
-signing.password=zhou9955
-signing.secretKeyRingFile=../key.gpg
 
