--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,16 @@ group=io.gitee.zjarlin
 version=0.0.1
 
 
+
+signing.keyId=7649054C
+signing.password=zhou9955
+#signing.secretKeyRingFile=../key.gpg
+signing.secretKeyRingFile=/Users/zjarlin/.gnupg/secring.gpg
+
+mavenCentralUsername=80/taBUS
+mavenCentralPassword=IsMt8GgdjfwdZA9PSNO8Uo4jtGDGLLpxHqfdKRjmro2b
+
+
+
+
+
