--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@
 
 [versions]
 jdk = "24"
+jsonschemaGenerator = "4.38.0"
 ksp = "2.2.0-2.0.2"
 # 构建工具版本
 filekitCompose = "0.8.8"
@@ -27,12 +28,37 @@ kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.8.0"
 ktor = "3.2.0"
 logback = "1.5.18"
-composeHotReload = "+"
+composeHotReload = "1.8.2"
 composeMultiplatform = "1.8.2"
 dokka = "2.0.0"
+springAi = "1.0.0"
+# Additional dependencies with fixed versions
+kotlinxDatetime = "0.7.1-0.6.x-compat"
+ktorfitLib = "2.6.1"
+navigationCompose = "2.9.0-beta03"
+coil = "3.2.0"
+springBootGradlePlugin = "3.5.3"
+kspSymbolProcessing = "2.2.0-2.0.2"
+postgresql = "42.7.7"
+mysqlConnector = "8.0.33"
+# Backend specific versions
+xFileStorage = "2.3.0"
+tomlj = "1.1.1"
+aspectjweaver = "1.9.24"
+fastjson2Kotlin = "2.0.57"
+minio = "8.5.17"
+saToken = "1.44.0"
+pinyin4j = "2.5.1"
+fastexcel = "1.2.0"
+hutoolAll = "5.8.39"
+damengJdbc = "8.1.3.140"
+jimmer = "0.9.99"
+flyway = "11.10.1"
 [libraries]
 
-
+# 定义 BOM 依赖
+spring-ai-bom = { group = "org.springframework.ai", name = "spring-ai-bom", version.ref = "springAi" }
+spring-ai-deepseek = { group = "org.springframework.ai", name = "spring-ai-starter-model-deepseek", version.ref = "springAi" }
 #gradlePlugin-android = "com.android.tools.build:gradle:8.11.0"
 filekit-compose = { module = "io.github.vinceglb:filekit-compose", version.ref = "filekitCompose" }
 gradlePlugin-android = "com.android.tools.build:gradle:8.10.0"
@@ -47,10 +73,15 @@ gradlePlugin-mavenPublish = "com.vanniktech:gradle-maven-publish-plugin:0.33.0"
 
 
 # Kotlin基础库
+h2 = { module = "com.h2database:h2" }
+jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin" }
+jsonschema-generator = { module = "com.github.victools:jsonschema-generator", version.ref = "jsonschemaGenerator" }
+kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 # Kotlinx库
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-reactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 # Android库
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
@@ -67,6 +98,41 @@ logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 ktor-server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty-jvm", version.ref = "ktor" }
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host-jvm", version.ref = "ktor" }
+mysql-connector-j = { module = "com.mysql:mysql-connector-j" }
+postgresql = { module = "org.postgresql:postgresql" }
+spring-ai-starter-mcp-server-webflux = { module = "org.springframework.ai:spring-ai-starter-mcp-server-webflux", version.ref = "springAi" }
+spring-ai-starter-model-ollama = { module = "org.springframework.ai:spring-ai-starter-model-ollama" }
+spring-ai-starter-vector-store-pgvector = { module = "org.springframework.ai:spring-ai-starter-vector-store-pgvector" }
+spring-ai-tika-document-reader = { module = "org.springframework.ai:spring-ai-tika-document-reader" }
+spring-boot-starter-thymeleaf = { module = "org.springframework.boot:spring-boot-starter-thymeleaf" }
+spring-boot-starter-validation = { module = "org.springframework.boot:spring-boot-starter-validation" }
+spring-boot-starter-web = { module = "org.springframework.boot:spring-boot-starter-web" }
+spring-boot-starter-webflux = { module = "org.springframework.boot:spring-boot-starter-webflux" }
+# Backend specific libraries
+x-file-storage-spring = { module = "org.dromara.x-file-storage:x-file-storage-spring", version.ref = "xFileStorage" }
+tomlj = { module = "org.tomlj:tomlj", version.ref = "tomlj" }
+aspectjweaver = { module = "org.aspectj:aspectjweaver", version.ref = "aspectjweaver" }
+fastjson2-kotlin = { module = "com.alibaba.fastjson2:fastjson2-kotlin", version.ref = "fastjson2Kotlin" }
+minio = { module = "io.minio:minio", version.ref = "minio" }
+sa-token-spring-boot3-starter = { module = "cn.dev33:sa-token-spring-boot3-starter", version.ref = "saToken" }
+pinyin4j = { module = "com.belerweb:pinyin4j", version.ref = "pinyin4j" }
+fastexcel = { module = "cn.idev.excel:fastexcel", version.ref = "fastexcel" }
+hutool-all = { module = "cn.hutool:hutool-all", version.ref = "hutoolAll" }
+dameng-jdbc-driver = { module = "com.dameng:DmJdbcDriver18", version.ref = "damengJdbc" }
+jimmer-spring-boot-starter = { module = "org.babyfish.jimmer:jimmer-spring-boot-starter", version.ref = "jimmer" }
+jimmer-ksp = { module = "org.babyfish.jimmer:jimmer-ksp", version.ref = "jimmer" }
+flyway-core = { module = "org.flywaydb:flyway-core", version.ref = "flyway" }
+flyway-database-postgresql = { module = "org.flywaydb:flyway-database-postgresql", version.ref = "flyway" }
+# Additional libraries with fixed versions
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
+ktorfit-lib = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref = "ktorfitLib" }
+navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-network-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil" }
+spring-boot-gradle-plugin = { module = "org.springframework.boot:org.springframework.boot.gradle.plugin", version.ref = "springBootGradlePlugin" }
+ksp-symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "kspSymbolProcessing" }
+postgresql-driver = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
+mysql-connector-java = { module = "mysql:mysql-connector-java", version.ref = "mysqlConnector" }
 
 [plugins]
 # Kotlin插件
