--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -54,6 +54,24 @@ hutoolAll = "5.8.39"
 damengJdbc = "8.1.3.140"
 jimmer = "0.9.99"
 flyway = "11.10.1"
+
+# UI 组件版本
+multiplatformMarkdownRenderer = "0.36.0-b02"
+composeDnd = "0.3.0"
+richeditorCompose = "1.0.0-rc11"
+fluentUi = "0.0.1-dev.8"
+
+# Koin 版本
+koin = "4.1.0"
+koinAnnotations = "2.1.0"
+
+# 其他依赖版本
+lazyPeopleHttp = "2.2.2"
+kotlinxCoroutinesSwing = "1.10.2"
+kotlinTest = "2.2.0"
+androidxLifecycleViewmodel = "2.9.1"
+androidxLifecycleRuntimeCompose = "2.9.1"
+
 [libraries]
 
 # 定义 BOM 依赖
@@ -98,8 +116,13 @@ logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 ktor-server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty-jvm", version.ref = "ktor" }
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host-jvm", version.ref = "ktor" }
-mysql-connector-j = { module = "com.mysql:mysql-connector-j" }
-postgresql = { module = "org.postgresql:postgresql" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
+# 移除重复的数据库驱动定义，使用下面带版本的定义
 spring-ai-starter-mcp-server-webflux = { module = "org.springframework.ai:spring-ai-starter-mcp-server-webflux", version.ref = "springAi" }
 spring-ai-starter-model-ollama = { module = "org.springframework.ai:spring-ai-starter-model-ollama" }
 spring-ai-starter-vector-store-pgvector = { module = "org.springframework.ai:spring-ai-starter-vector-store-pgvector" }
@@ -133,6 +156,24 @@ spring-boot-gradle-plugin = { module = "org.springframework.boot:org.springframe
 ksp-symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "kspSymbolProcessing" }
 postgresql-driver = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
 mysql-connector-java = { module = "mysql:mysql-connector-java", version.ref = "mysqlConnector" }
+
+# UI 组件库
+multiplatform-markdown-renderer-m3 = { module = "com.mikepenz:multiplatform-markdown-renderer-m3", version.ref = "multiplatformMarkdownRenderer" }
+compose-dnd = { module = "com.mohamedrejeb.dnd:compose-dnd", version.ref = "composeDnd" }
+richeditor-compose = { module = "com.mohamedrejeb.richeditor:richeditor-compose", version.ref = "richeditorCompose" }
+fluent = { module = "com.konyaco:fluent", version.ref = "fluentUi" }
+fluent-icons-extended = { module = "com.konyaco:fluent-icons-extended", version.ref = "fluentUi" }
+
+# Koin 依赖注入
+koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
+koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koinAnnotations" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
+koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation", version.ref = "koin" }
+
+# 其他依赖
+lazy-people-http = { module = "io.github.ltttttttttttt:LazyPeopleHttp-lib", version.ref = "lazyPeopleHttp" }
 
 [plugins]
 # Kotlin插件
