--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,9 +64,6 @@ fluentUi = "0.0.1-dev.8"
 # Koin 版本
 koin = "4.1.0"
 koinAnnotations = "2.1.0"
-# Koin KSP 编译器版本
-koinKspCompiler = "2.1.0"
-
 # Gradle 插件版本
 androidGradlePlugin = "8.10.1"
 dokkaGradlePlugin = "2.0.0"
@@ -199,7 +196,7 @@ koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-view
 lazy-people-http = { module = "io.github.ltttttttttttt:LazyPeopleHttp-lib", version.ref = "lazyPeopleHttp" }
 
 # Koin KSP 编译器
-koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koinKspCompiler" }
+koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koinAnnotations" }
 
 # 移除重复的 gradle-plugin 定义，使用已存在的 gradlePlugin 定义
 
