--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,10 +6,16 @@
 [versions]
 jdk = "24"
 jsonschemaGenerator = "4.38.0"
+
 ksp = "2.2.0-2.0.2"
+kotlin = "2.2.0"
+
+
+#ksp = "2.2.20-Beta1"
+#kotlin = "2.2.20-Beta1-2.0.2"
+
 # 构建工具版本
 filekitCompose = "0.8.8"
-kotlin = "2.2.0"
 agp = "8.7.3"
 # Android配置
 android-compileSdk = "35"
